--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-# Site settings
-name: Dat site title tho
-title: Your awesome title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+name: Scott Linder
+title: Scott Linder
+email: scott@scottlinder.com
+description: "Homepage of Scott Linder"
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://scottlinder.com"
 
-# Build settings
 markdown: kramdown
 permalinks: pretty
